0.2.6

- Added feature: Broader search: searching for tree will no also find treehouse
- Added feature: Snip names are case insensitive
- Added feature: Jabber notification for new snips and User logins
- Added feature: {since-last-visit:funzel} to show all changed snips since last visit for funzel
- Added feature: --strike-- for strike through text
- Added feature: {quote}this is a quote{quote}
- Fixed bug: # in external links didn't work, <ul><ul> was rendered in weblogs, double images in
  external links in weblog
- Added feature: Changed snips since last visit
- Added feature: RSS Autodiscovery, RSS
- Added feature: {image:http://boing.org/boing.gif} for external images
- Added feature: create snip at search, when snip does not exist
- Added feature: XML-RPC Blogger API newPost()
- Added feature: automatic re-login via cookie

0.2.5

- Added feature: SnipSnap is multi-server capable
- SnipSnap stores information about snip views, clicked links between snips and incoming snips
- storing information about users, like lastlogin and creation time. Added owner to snips to seperate creator and owner
- Added some macros (like {last-login:funzel}, {snips-by-hotness})
- Preview Button
- Following Jakob Nielsen, start and the logo are no longer clickable on the start page
- Basic RSS support
- Fixed HTML to XHTML 1.0 and CSS to validated CSS