@@ -66,6 +66,8 @@ public class RssServlet extends HttpServlet {
     RequestDispatcher dispatcher;
     if ("1.0".equals(version)) {
       dispatcher = request.getRequestDispatcher("/rdf.jsp");
+    } else if ("2.0".equals(version)) {
+      dispatcher = request.getRequestDispatcher("/rss2.jsp");
     } else {
       dispatcher = request.getRequestDispatcher("/rss.jsp");
     }
